--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Técnicas</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/Galeria.js"></script>
+    <script src="./js/Galeria.js" defer></script>
     <!-- Font Bebas Neue (Se aplica en el menú y algunos subtítulos) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,111 +38,40 @@
         </ul>
     </nav>
 
-    <section class="Section-galeria">
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        <div>
-            <img class="Section-imgs" src="" alt="" title="" loading="lazy">
-            <h2 class="Section-h2--galeria"></h2>
-        </div>
-        
-    </section>
+    <!-- Section de galería, con un grid de 5 filas y 5 columnas + ligthbox con cada una de las imágenes para que se vea más amplia -->
+        <section class="Section-galeria">
+            <img src="imgs/Img_1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+        </section>
+        <div class="Lightbox">
+            <button class="Lightbox-btn">&#215;</button>
+            <img src="imgs/Img_1.jpg" alt="imagen-grande" title="imagen-grande" loading="lazy" class="Imagen-grande">
+        </div> 
 
-        <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
+        <!-- Logo sticky con rotación de 360deg común para todas las secciones, menos la sección de inicio -->
         <div class="Logo-sticky">
             <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
         </div>
