footer centrado + galería imágenes :)

--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -87,7 +87,7 @@
                     </a>
                 </li>
             </ul>
-            <div class="Footer-copyright">&#169; 2024 Nails World</div>
+            <div class="Footer-copyright">&#169; Nails World</div>
         </footer>
 </body>
 </html>
