--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -64,7 +64,6 @@
             <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
             <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
             <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
         </section>
         <div class="Lightbox">
             <button class="Lightbox-btn">&#215;</button>
@@ -106,7 +105,7 @@
                     </a>
                 </li>
             </ul>
-            <div class="Footer-copyright">&#169; 2024 Nails World</div>
+            <div class="Footer-copyright">&#169; Nails World</div>
         </footer>
 </body>
 </html>
