--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -50,6 +50,7 @@
 
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
     <footer class="Footer">
+        <div class="Footer-wrapper">
         <nav class="Footer-nav">
             <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
             <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
@@ -79,6 +80,7 @@
             </li>
         </ul>
         <div class="Footer-copyright">&#169; Nails World</div>
+        </div>
     </footer>
 </body>
 
