--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -21,10 +21,8 @@
 </head>
 <body>
 
-    <header class="Header-wrapper--contacto">
-        <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera"
-                class="Header-img--contacto"></picture>
-        <h1 class="Header-h1--contacto">contacto</h1>
+    <header class="Header-wrapper">
+            <h1 class="Header-h1">contacto</h1>
     </header>
         
         <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
