--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Encabezado de la página, es el logo que está indicado como h1-->
-    <header class="Header-wrapper">
+    <header class="Header-home">
         <h1>
             <img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
         </h1>
