--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -22,21 +22,24 @@
 <body>
 
     <!-- Encabezado donde se incluye la imagen de cabecera y el título de la sección de efectos -->
-    <header class="Header-wrapper--galeria">
-        <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera" class="Header-img--galeria"></picture>
-        <h1 class="Header-h1--galeria">galería</h1>
+    
+    <header class="Header-wrapper">
+            <h1 class="Header-h1">galería</h1>
     </header>
     
     <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
-    <nav>
-        <ul class="Header-ul--galeria">
-            <li class="Header-li--galeria"><a href="Inicio.html">inicio</a></li>
-            <li class="Header-li--galeria"><a href="Formas.html">formas</a></li>
-            <li class="Header-li--galeria"><a href="Tecnicas.html">técnicas</a></li>
-            <li class="Header-li--galeria"><a href="Galeria.html">galería</a></li>
-            <li class="Header-li--galeria"><a href="Contacto.html">contacto</a></li>
+    <header class="Header-responsive">
+    <button class="Header-btn"><img src="imgs/menu-responsive.svg" alt=""></button>
+    <nav class="Header-nav">
+        <ul class="Header-ul">
+            <li class="Header-li"><a href="Inicio.html">inicio</a></li>
+            <li class="Header-li"><a href="Formas.html">formas</a></li>
+            <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
+            <li class="Header-li"><a href="Galeria.html">galería</a></li>
+            <li class="Header-li"><a href="Contacto.html">contacto</a></li>
         </ul>
     </nav>
+    </header>
 
     <!-- Section de galería, con un grid de 5 filas y 5 columnas + ligthbox con cada una de las imágenes para que se vea más amplia -->
         <section class="Section-galeria">
