--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -27,10 +27,8 @@
 <body>
 
     <!-- Encabezado donde se incluye la imagen de cabecera y el título de la sección de técnicas -->
-    <header class="Header-wrapper--tecnicas">
-        <picture><img src="imgs/fondo-titulo-azul.jpg" alt="img-cabecera" title="img-cabecera"
-                class="Header-img--tecnicas"></picture>
-        <h1 class="Header-h1--tecnicas">técnicas</h1>
+    <header class="Header-wrapper">
+        <h1 class="Header-h1">técnicas</h1>
     </header>
 
     <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
