falta inicio y contacto y sus media query

--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
+    <script src="./js/Inicio.js" defer></script>
     <title>Nails Wold</title>
 </head>
 
@@ -15,17 +15,22 @@
         <h1>
             <img src="imgs/logo-azul.svg" alt="logo-principal" title="logo-principal" class="Header-img">
         </h1>
+    </header>
 
     <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
+    <header class="Header-responsive">
+        <button class="Header-btn">&#8788;</button>
         <nav class="Header-nav">
             <ul class="Header-ul">
+                <li class="Header-li"><a href="Inicio.html">inicio</a></li>
                 <li class="Header-li"><a href="Formas.html">formas</a></li>
                 <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
                 <li class="Header-li"><a href="Galeria.html">galería</a></li>
                 <li class="Header-li"><a href="Contacto.html">contacto</a></li>
             </ul>
         </nav>
-    </header>
+        </header>
+
 
     <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
     <div class="Logo-sticky">
