--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nails World - Contacto</title>
     <link rel="stylesheet" href="./css/index.css">
-    <script src="./js/index.js"></script>
+    <script src="./js/Contacto.js" defer></script>
 </head>
 <body>
 
@@ -14,15 +14,18 @@
     </header>
         
         <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
-        <nav>
-            <ul class="Header-ul--contacto">
-                <li class="Header-li--contacto"><a href="Inicio.html">inicio</a></li>
-                <li class="Header-li--contacto"><a href="Formas.html">formas</a></li>
-                <li class="Header-li--contacto"><a href="Tecnicas.html">técnicas</a></li>
-                <li class="Header-li--contacto"><a href="Galeria.html">galería</a></li>
-                <li class="Header-li--contacto"><a href="Contacto.html">contacto</a></li>
+    <header class="Header-responsive">
+        <button class="Header-btn">&#8788;</button>
+        <nav class="Header-nav">
+            <ul class="Header-ul">
+                <li class="Header-li"><a href="Inicio.html">inicio</a></li>
+                <li class="Header-li"><a href="Formas.html">formas</a></li>
+                <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
+                <li class="Header-li"><a href="Galeria.html">galería</a></li>
+                <li class="Header-li"><a href="Contacto.html">contacto</a></li>
             </ul>
         </nav>
+    </header>
 
         <div class="Marquesina">
             <div class="Marquesina-caja">
@@ -43,37 +46,39 @@
         </div>
 
 
-    <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
-            <footer class="Footer">
-                <nav class="Footer-nav">
-                    <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
-                    <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
-                    <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
-                    <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
-                    <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
-                </nav>
-            <ul class="Footer-ul">
-                <li class="Footer-li">
-                    <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
-                        rel="noreferrer">
-                        <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
-                            oading="lazy">
-                    </a>
-                </li>
-                <li class="Footer-li">
-                    <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
-                        <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
-                            loading="lazy">
-                    </a>
-                </li>
-                <li class="Footer-li">
-                    <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
-                        <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
-                            title="instagram" loading="lazy">
-                    </a>
-                </li>
-            </ul>
-            <div class="Footer-copyright">&#169; Nails World</div>
-        </footer>
+    <!-- Footer del documento, donde se incluyen las redes sociales, las diferentes secciones del documento y el copyright -->
+    <footer class="Footer">
+        <div class="Footer-wrapper">
+        <nav class="Footer-nav">
+            <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
+            <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
+            <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
+            <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
+            <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+        </nav>
+        <ul class="Footer-ul">
+            <li class="Footer-li">
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
+                    rel="noreferrer">
+                    <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
+                        loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
+                        loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
+                        title="instagram" loading="lazy">
+                </a>
+            </li>
+        </ul>
+        <div class="Footer-copyright">&#169; Nails World</div>
+        </div>
+    </footer>
 </body>
 </html>
