--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -12,12 +12,12 @@
     <!-- Encabezado donde se incluye la imagen de cabecera y el título de la sección de efectos -->
     
     <header class="Header-wrapper">
-            <h1 class="Header-h1">galería</h1>
+            <h1 class="Header-h1 Right">galería</h1>
     </header>
     
     <!-- Menú donde aparecen todas las secciones, en el responsive desaparecerá para convertirse en un desplegable -->
     <header class="Header-responsive">
-    <button class="Header-btn"><img src="imgs/menu-responsive.svg" alt=""></button>
+        <button class="Header-btn">&#8788;</button>
     <nav class="Header-nav">
         <ul class="Header-ul">
             <li class="Header-li"><a href="Inicio.html">inicio</a></li>
@@ -66,37 +66,39 @@
             <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
         </div>
 
-    <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
-            <footer class="Footer">
-                <nav class="Footer-nav">
-                    <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
-                    <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
-                    <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
-                    <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
-                    <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
-                </nav>
-            <ul class="Footer-ul">
-                <li class="Footer-li">
-                    <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
-                        rel="noreferrer">
-                        <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
-                            oading="lazy">
-                    </a>
-                </li>
-                <li class="Footer-li">
-                    <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
-                        <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
-                            loading="lazy">
-                    </a>
-                </li>
-                <li class="Footer-li">
-                    <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
-                        <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
-                            title="instagram" loading="lazy">
-                    </a>
-                </li>
-            </ul>
-            <div class="Footer-copyright">&#169; Nails World</div>
-        </footer>
+    <!-- Footer del documento, donde se incluyen las redes sociales, las diferentes secciones del documento y el copyright -->
+    <footer class="Footer">
+        <div class="Footer-wrapper">
+        <nav class="Footer-nav">
+            <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
+            <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
+            <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
+            <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
+            <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+        </nav>
+        <ul class="Footer-ul">
+            <li class="Footer-li">
+                <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
+                    rel="noreferrer">
+                    <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
+                        loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
+                    <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
+                        loading="lazy">
+                </a>
+            </li>
+            <li class="Footer-li">
+                <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
+                    <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
+                        title="instagram" loading="lazy">
+                </a>
+            </li>
+        </ul>
+        <div class="Footer-copyright">&#169; Nails World</div>
+        </div>
+    </footer>
 </body>
 </html>
