--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -26,19 +26,28 @@
             </ul>
         </nav>
     </header>
-
-        <div class="Marquesina">
-            <div class="Marquesina-caja">
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-                <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
-            </div>
+    <div class="Marquesina">
+        <div class="Marquesina-caja">
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
+            <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
         </div>
+    </div>
+
+    <section class="Section-contacto">
+        <h2 class="Section-h2--contacto">Sabemos que después de toda esta información, tienes muchas ganas de cuidar tus uñas y conseguir la manicura perfecta,
+         nosotros te podemos ayudar a conseguirla.
+        </h2>
+        <p class="Section-p--contacto">Rellena el siguiente formulario con tu nombre, apellido y e-mail, después adjunta una foto de tus manos y déjanos
+            tu comentario. Nosotros haremos por tí un estudio de tus manos y uñas, te aconsejaremos cual es la forma, técnica y diseño que más te conviene
+        para que consigas la manicura perfecta. </p>
+    </section>
+
 
         <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
         <div class="Logo-sticky">
