--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -31,34 +31,30 @@
 
     <!-- Section de galería, con un grid de 5 filas y 5 columnas + ligthbox con cada una de las imágenes para que se vea más amplia -->
         <section class="Section-galeria">
-            <img src="imgs/Img_1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-grid1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria2.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria4.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria5.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria6.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria7.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria9.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria10.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria11.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria12.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria13.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria14.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria16.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria17.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria18.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria19.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria21.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria22.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria23.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria24.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
         </section>
         <div class="Lightbox">
             <button class="Lightbox-btn">&#215;</button>
-            <img src="imgs/Img_1.jpg" alt="imagen-grande" title="imagen-grande" loading="lazy" class="Imagen-grande">
+            <img src="imgs/img-galeria1.jpg" alt="imagen-grande" title="imagen-grande" loading="lazy" class="Imagen-grande">
         </div> 
 
         <!-- Logo sticky con rotación de 360deg común para todas las secciones, menos la sección de inicio -->
