--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -18,11 +18,11 @@
         <button class="Header-btn">&#8788;</button>
         <nav class="Header-nav">
             <ul class="Header-ul">
-                <li class="Header-li"><a href="Inicio.html">inicio</a></li>
-                <li class="Header-li"><a href="Formas.html">formas</a></li>
-                <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
-                <li class="Header-li"><a href="Galeria.html">galería</a></li>
-                <li class="Header-li"><a href="Contacto.html">contacto</a></li>
+                <li class="Header-li"><a href="Inicio.html" title="Ir a inicio">inicio</a></li>
+                <li class="Header-li"><a href="Formas.html" title="Ir a formas">formas</a></li>
+                <li class="Header-li"><a href="Tecnicas.html" title="Ir a técnicas">técnicas</a></li>
+                <li class="Header-li"><a href="Galeria.html" title="Ir a galeria">galería</a></li>
+                <li class="Header-li"><a href="Contacto.html" title="Ir a contacto">contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -59,28 +59,28 @@
     <footer class="Footer">
         <div class="Footer-wrapper">
         <nav class="Footer-nav">
-            <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
-            <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
-            <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
-            <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
-            <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+            <h3 class="Footer-h3"><a href="Inicio.html" title="Ir a inicio">inicio</a></h3>
+            <h3 class="Footer-h3"><a href="Formas.html" title="Ir a formas">formas</a></h3>
+            <h3 class="Footer-h3"><a href="Tecnicas.html" title="Ir a técnica">técnicas</a></h3>
+            <h3 class="Footer-h3"><a href="Galeria.html" title="Ir a galeria" >galería</a></h3>
+            <h3 class="Footer-h3"><a href="Contacto.html" title="Ir a contacto">contacto</a></h3>
         </nav>
         <ul class="Footer-ul">
             <li class="Footer-li">
-                <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
+                <a href="https://www.facebook.com/?locale=es_ES" title="Ir a facebook" target="_blank"
                     rel="noreferrer">
                     <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
+                <a href="https://x.com/?lang=es" title="Ir a twitter" target="_blank" rel="noreferrer">
                     <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
+                <a href="https://www.instagram.com/" title="Ir a instagram" target="_blank" rel="noreferrer">
                     <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
                         title="instagram" loading="lazy">
                 </a>
