--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -20,37 +20,37 @@
         <button class="Header-btn">&#8788;</button>
     <nav class="Header-nav">
         <ul class="Header-ul">
-            <li class="Header-li"><a href="Inicio.html">inicio</a></li>
-            <li class="Header-li"><a href="Formas.html">formas</a></li>
-            <li class="Header-li"><a href="Tecnicas.html">técnicas</a></li>
-            <li class="Header-li"><a href="Galeria.html">galería</a></li>
-            <li class="Header-li"><a href="Contacto.html">contacto</a></li>
+            <li class="Header-li"><a href="Inicio.html" title="Ir a inicio">inicio</a></li>
+            <li class="Header-li"><a href="Formas.html" title="Ir a formas">formas</a></li>
+            <li class="Header-li"><a href="Tecnicas.html" title="Ir a técnicas">técnicas</a></li>
+            <li class="Header-li"><a href="Galeria.html" title="Ir a galeria">galería</a></li>
+            <li class="Header-li"><a href="Contacto.html" title="Ir a contacto">contacto</a></li>
         </ul>
     </nav>
     </header>
 
     <!-- Section de galería, con un grid de 5 filas y 5 columnas + ligthbox con cada una de las imágenes para que se vea más amplia -->
         <section class="Section-galeria">
-            <img src="imgs/img-galeria1.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria2.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria4.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria5.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria6.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria7.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria9.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria10.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria11.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria12.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria13.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria14.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria16.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria17.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria18.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria19.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria21.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria22.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria23.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria24.jpg" alt="" title="" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria1.jpg" alt="imagen-1-galeria" title="imagen-1-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria2.jpg" alt="imagen-2-galeria" title="imagen-2-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria4.jpg" alt="imagen-3-galeria" title="imagen-3-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria5.jpg" alt="imagen-4-galeria" title="imagen-4-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria6.jpg" alt="imagen-5-galeria" title="imagen-5-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria7.jpg" alt="imagen-6-galeria" title="imagen-6-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria9.jpg" alt="imagen-7-galeria" title="imagen-7-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria10.jpg" alt="imagen-8-galeria" title="imagen-8-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria11.jpg" alt="imagen-9-galeria" title="imagen-9-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria12.jpg" alt="imagen-10-galeria" title="imagen-10-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria13.jpg" alt="imagen-11-galeria" title="imagen-11-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria14.jpg" alt="imagen-12-galeria" title="imagen-12-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria16.jpg" alt="imagen-13-galeria" title="imagen-13-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria17.jpg" alt="imagen-14-galeria" title="imagen-14-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria18.jpg" alt="imagen-15-galeria" title="imagen-15-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria19.jpg" alt="imagen-16-galeria" title="imagen-16-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria21.jpg" alt="imagen-17-galeria" title="imagen-17-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria22.jpg" alt="imagen-18-galeria" title="imagen-18-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria23.jpg" alt="imagen-19-galeria" title="imagen-19-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria24.jpg" alt="imagen-20-galeria" title="imagen-20-galeria" loading="lazy" class="Galeria-img" >
         </section>
         <div class="Lightbox">
             <button class="Lightbox-btn">&#215;</button>
@@ -66,28 +66,28 @@
     <footer class="Footer">
         <div class="Footer-wrapper">
         <nav class="Footer-nav">
-            <h3 class="Footer-h3"><a href="Inicio.html">inicio</a></h3>
-            <h3 class="Footer-h3"><a href="Formas.html">formas</a></h3>
-            <h3 class="Footer-h3"><a href="Tecnicas.html">técnicas</a></h3>
-            <h3 class="Footer-h3"><a href="Galeria.html">galería</a></h3>
-            <h3 class="Footer-h3"><a href="Contacto.html">contacto</a></h3>
+            <h3 class="Footer-h3"><a href="Inicio.html" title="Ir a inicio">inicio</a></h3>
+            <h3 class="Footer-h3"><a href="Formas.html" title="Ir a formas">formas</a></h3>
+            <h3 class="Footer-h3"><a href="Tecnicas.html" title="Ir a técnica">técnicas</a></h3>
+            <h3 class="Footer-h3"><a href="Galeria.html" title="Ir a galeria" >galería</a></h3>
+            <h3 class="Footer-h3"><a href="Contacto.html" title="Ir a contacto">contacto</a></h3>
         </nav>
         <ul class="Footer-ul">
             <li class="Footer-li">
-                <a href="https://www.facebook.com/?locale=es_ES" title="facebook" target="_blank"
+                <a href="https://www.facebook.com/?locale=es_ES" title="Ir a facebook" target="_blank"
                     rel="noreferrer">
                     <img src="imgs/facebook-svgrepo-com.svg" alt="icono facebook" title="facebook"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://x.com/?lang=es" title="twitter" target="_blank" rel="noreferrer">
+                <a href="https://x.com/?lang=es" title="Ir a twitter" target="_blank" rel="noreferrer">
                     <img src="imgs/twitter-154-svgrepo-com.svg" alt="icono twitter" title="twitter"
                         loading="lazy">
                 </a>
             </li>
             <li class="Footer-li">
-                <a href="https://www.instagram.com/" title="instagram" target="_blank" rel="noreferrer">
+                <a href="https://www.instagram.com/" title="Ir a instagram" target="_blank" rel="noreferrer">
                     <img src="imgs/instagram-svgrepo-com.svg" alt="icono instagram"
                         title="instagram" loading="lazy">
                 </a>
