--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -31,26 +31,26 @@
 
     <!-- Section de galería, con un grid de 5 filas y 5 columnas + ligthbox con cada una de las imágenes para que se vea más amplia -->
         <section class="Section-galeria">
-            <img src="imgs/img-galeria1.jpg" alt="imagen-1-galeria" title="imagen-1-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria2.jpg" alt="imagen-2-galeria" title="imagen-2-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria4.jpg" alt="imagen-3-galeria" title="imagen-3-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria5.jpg" alt="imagen-4-galeria" title="imagen-4-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria6.jpg" alt="imagen-5-galeria" title="imagen-5-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria7.jpg" alt="imagen-6-galeria" title="imagen-6-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria9.jpg" alt="imagen-7-galeria" title="imagen-7-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria10.jpg" alt="imagen-8-galeria" title="imagen-8-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria11.jpg" alt="imagen-9-galeria" title="imagen-9-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria12.jpg" alt="imagen-10-galeria" title="imagen-10-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria13.jpg" alt="imagen-11-galeria" title="imagen-11-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria14.jpg" alt="imagen-12-galeria" title="imagen-12-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria16.jpg" alt="imagen-13-galeria" title="imagen-13-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria17.jpg" alt="imagen-14-galeria" title="imagen-14-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria18.jpg" alt="imagen-15-galeria" title="imagen-15-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria19.jpg" alt="imagen-16-galeria" title="imagen-16-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria21.jpg" alt="imagen-17-galeria" title="imagen-17-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria22.jpg" alt="imagen-18-galeria" title="imagen-18-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria23.jpg" alt="imagen-19-galeria" title="imagen-19-galeria" loading="lazy" class="Galeria-img" >
-            <img src="imgs/img-galeria24.jpg" alt="imagen-20-galeria" title="imagen-20-galeria" loading="lazy" class="Galeria-img" >
+            <img src="imgs/img-galeria1.jpg" alt="imagen-1-galeria" title="imagen-1-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria2.jpg" alt="imagen-2-galeria" title="imagen-2-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria4.jpg" alt="imagen-3-galeria" title="imagen-3-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria5.jpg" alt="imagen-4-galeria" title="imagen-4-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria6.jpg" alt="imagen-5-galeria" title="imagen-5-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria7.jpg" alt="imagen-6-galeria" title="imagen-6-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria9.jpg" alt="imagen-7-galeria" title="imagen-7-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria10.jpg" alt="imagen-8-galeria" title="imagen-8-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria11.jpg" alt="imagen-9-galeria" title="imagen-9-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria12.jpg" alt="imagen-10-galeria" title="imagen-10-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria13.jpg" alt="imagen-11-galeria" title="imagen-11-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria14.jpg" alt="imagen-12-galeria" title="imagen-12-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria16.jpg" alt="imagen-13-galeria" title="imagen-13-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria17.jpg" alt="imagen-14-galeria" title="imagen-14-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria18.jpg" alt="imagen-15-galeria" title="imagen-15-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria19.jpg" alt="imagen-16-galeria" title="imagen-16-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria21.jpg" alt="imagen-17-galeria" title="imagen-17-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria22.jpg" alt="imagen-18-galeria" title="imagen-18-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria23.jpg" alt="imagen-19-galeria" title="imagen-19-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
+            <img src="imgs/img-galeria24.jpg" alt="imagen-20-galeria" title="imagen-20-galeria" loading="lazy" class="Galeria-img" width="800" height="800">
         </section>
         <div class="Lightbox">
             <button class="Lightbox-btn">&#215;</button>
