--- a/Nails-world/index.html
+++ b/Nails-world/index.html
@@ -33,5 +33,7 @@
             <button type="submit">Enviar</button>
         </form>
     </div>
+
+    <img src="imgs/img-grid1.webp" alt="">
 </body>
 </html>
