falta el formulario

--- a/Nails-world/Tecnicas.html
+++ b/Nails-world/Tecnicas.html
@@ -57,7 +57,7 @@
                 para uñas más blandas y con tendencia a resquebrajarse. Con esta técnica podrás obtener el largo y forma
                 de la uña que desees.
                 Se pueden alargar con tips o con moldes y la duración de esta manicura es de 2 a 4 semanas.</p>
-                <img src="imgs/img-grid1.jpg" alt="imagen-tecnicas1" title="imagen-tecnicas1" loading="lazy" class="Article-img--tecnicas">
+                <img src="imgs/img-grid1.jpg" alt="imagen-tecnicas1" title="imagen-tecnicas1" loading="lazy" class="Article-img--tecnicas" width="500" height="333">
         </div>
         <div class="Article-wrapper--tecnicas">
             <h3 class="Article-h3--tecnicas">uñas de gel</h3>
@@ -69,7 +69,7 @@
                 líquido que desinfecta y prepara tu uña para el siguiente paso, que es aplicar el Builder Clear Gel, que
                 es el gel constructor.
                 La duración de esta técnica de manicura es de 2 a 4 semanas.</p>
-                <img src="imgs/img-grid3.jpg" alt="imagen-tecnicas2" title="imagen-tecnicas2" loading="lazy" class="Article-img--tecnicas">
+                <img src="imgs/img-grid3.jpg" alt="imagen-tecnicas2" title="imagen-tecnicas2" loading="lazy" class="Article-img--tecnicas" width="500" height="333">
         </div>
         <div class="Article-wrapper--tecnicas">
             <h3 class="Article-h3--tecnicas">uñas de fibra de vidrio</h3>
@@ -84,7 +84,7 @@
                 La duración de esta técnica puede llegar a ser de uno a seis meses, siempre retocándolas cuando tu uña
                 empiece a crecer.
             </p>
-            <img src="imgs/img-grid4.jpg" alt="imagen-tecnicas3" title="imagen-tecnicas3" loading="lazy" class="Article-img--tecnicas">
+            <img src="imgs/img-grid4.jpg" alt="imagen-tecnicas3" title="imagen-tecnicas3" loading="lazy" class="Article-img--tecnicas" width="500" height="333">
         </div>
         <div class="Article-wrapper--tecnicas">
             <h3 class="Article-h3--tecnicas Semi-permanente">esmaltado semi-permanente</h3>
@@ -95,7 +95,7 @@
                 Primero se aplicará una capa de base (Base Coat), seguidamente el color deseado y para terminar se
                 aplica el Top Coat que fijará y hará permanente el esmalte. Entre cada uno de estos pasos, tendrás que
                 introducir las uñas en la lámpara UV.</p>
-                <img src="imgs/img-grid5.jpg" alt="imagen-tecnicas4" title="imagen-tecnicas4" loading="lazy" class="Article-img--tecnicas">
+                <img src="imgs/img-grid5.jpg" alt="imagen-tecnicas4" title="imagen-tecnicas4" loading="lazy" class="Article-img--tecnicas" width="500" height="333">
         </div>
     </article>
 
