--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -32,11 +32,47 @@
         </header>
 
 
-    <!-- Logo sticky común para todas las secciones, menos la sección de inicio -->
-    <div class="Logo-sticky">
-        <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
-    </div>
+        
+        <main class="Main-inicio">
+            <div class="Main-wrapper">
+                <img src="imgs/principal.jpg" alt="Img-principal" title="Img-principal" class="Main-img" width="800" height="533">
+                <h1 class="Main-h1">Bienvenid@</h1>
+            </div>
+        </main>
 
+        <section class="Section-historia">
+            <h2 class="Section-h2--historia">La manicura se ha convertido en una parte esencial en la vida de muchos de nosotros, lucir unas uñas bonitas y cuidadas no es dificil, aquí te vamos a dar información y consejos cruciales para conseguir la manicura perfecta.</h2>
+            <h3 class="Section-h3--historia">Historia</h3>
+            <p class="Section-p--historia">Toda la evolución de la manicura hasta el día de hoy, no habría sido posible sin la aparición de dos personas en el mundo de la cosmética, los creadores e impulsores del esmalte tradicional de uñas.</p>
+            <div class="Section-grid--historia">
+                <div class="Section-wrapper--historia">
+                    <img src="imgs/michelle-mernard.jpg" alt="Michelle-Mernard" title="Michelle-Mernard" class="Wrapper-img--historia" loading="lazy" width="150" height="150">
+                    <h3 class="Wrapper-h3--historia">michelle mernard</h3>
+                    <p class="Wrapper-p--historia">De origen francés, esta maquilladora profesional se inspiró en la tecnología introducida para la pintura de automóviles, para conseguir la fórmula de lo que hoy conocemos como el esmalte de uñas. Se asoció con la compañía de Charles Revson y juntos lo patentaron. </p>
+                </div>
+                <div class="Section-wrapper--historia">
+                    <img src="imgs/charles-revson.jpg" alt="Charles-Revson" title="Charles-Revson" class="Wrapper-img--historia" loading="lazy" width="150" height="150">
+                    <h3 class="Wrapper-h3--historia">charles revson</h3>
+                    <p class="Wrapper-p--historia">Empresario y filántropo estadounidense. Es conocido principalmente como pionero de la industria cosmética, creó y dirigió la empresa multinacional Revlon durante cinco décadas. El esmalte de uñas fué el primer cosmético que creó Revlon.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="Section-cuidados">
+            <h3 class="Section-h3--cuidados">Cuidados</h3>
+            <video src="" controls autoplay muted playsinline poster="imgs/" controlslist="nodownload"></video>
+            <div class="Section-grid--historia">
+                <img src="imgs/aceite-cuticulas.jpg" alt="img-aceite-cuticulas" title="img-aceite-cuticulas" loading="lazy" width="350" height="350">
+                <img src="imgs/algodon-cuticulas.jpg" alt="img-algodon-cuticulas" title="img-algodon-cuticulas" loading="lazy" width="350" height="525">
+                <img src="imgs/cuticulas.jpg" alt="img-cuticulas" title="img-cuticulas" loading="lazy" width="400" height="309">
+                <img src="imgs/serum-cuticulas.jpg" alt="img-serum-cuticulas" title="img-serum-cuticulas" loading="lazy" width="350" height="525">
+            </div>
+        </section>
+        
+        <!-- Logo sticky común para todas las secciones -->
+        <div class="Logo-sticky">
+            <img src="imgs/logo-azul-redondo.svg" alt="Logo-sticky" title="Logo-sticky" class="Img-sticky">
+        </div>
 
     <!-- Footer del documento, donde se incluyen las redes sociales y el copyright -->
     <footer class="Footer">
